@@ -4,6 +4,7 @@ PySWIP CHANGELOG
 + 0.2.4
 
   * Maintenance release of PySWIP
+  * Solved issue 4 "Patch for a dynamic method"
   * Solved issue 5 "Patch: hash and eq methods for Atom class"
 
 + 0.2.3
